k8s manifests/anti-affinity-tests/anti-affinity-dummy-deploy-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anti-affinity-dummy-clients
  namespace: ingress-perf-testing
spec:
  replicas: 4
  selector:
    matchLabels:
      app: anti-affinity-dummies
  template:
    metadata:
      labels:
        app: anti-affinity-dummies
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - anti-affinity-dummies
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: dummy
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-anti-affinity-dummy-clients
  namespace: ingress-perf-testing
spec:
  type: ClusterIP
  selector:
    app: anti-affinity-dummies
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
