k8s manifests/anti-affinity-tests/nginx-ingress-anti-affinity.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: nginxingress-anti-affinity-dummies
    namespace: ingress-perf-testing
  spec:
    ingressClassName: nginx-anti-affinity-class
    rules:
      - host: antiaffinity
        http:
          paths:
            - pathType: Exact
              backend:
                service:
                  name: service-anti-affinity-dummy-clients
                  port:
                    number: 80
              path: /
